# ucra

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  README.md  create_test_vb.sh
.github/workflows/: ci.yml  docs.yml  release.yml
.kilocode/: mcp.json
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
bindings/cpp/: CMakeLists.txt  ucra_cpp-config.cmake.in  ucra_cpp.hpp
bindings/cpp/tests/: CMakeLists.txt  emit_wav.cpp  sample_app.cpp  test_ucra_cpp_simple.cpp
bindings/dotnet/: CMakeLists.txt  Curves.cs  Engine.cs  Manifest.cs  NoteSegment.cs  README.md  Streaming.cs  UCRA.NET.csproj  UcraException.cs
bindings/dotnet/Interop/: NativeMethods.cs
bindings/dotnet/samples/: Program.cs  ProgramEmitWav.cs  UCRA.NET.Sample.csproj
bindings/dotnet/tests/: SampleApp.cs  StreamingTests.cs  UCRA.NET.Tests.csproj  UcraWrapperTests.cs
bindings/python/: CMakeLists.txt  pyproject.toml  setup.py
bindings/python/examples/: sample.py  sample_emit_wav.py
bindings/python/src/: curves_wrapper.cpp  engine_wrapper.cpp  main.cpp  manifest_wrapper.cpp  types_wrapper.cpp
bindings/python/tests/: test_ucra.py
bindings/rust/: CMakeLists.txt  README.md
bindings/rust/ucra/: Cargo.toml
bindings/rust/ucra-sys/: Cargo.toml  build.rs
bindings/rust/ucra/examples/: emit_wav.rs
bindings/rust/ucra/src/: lib.rs
bindings/rust/ucra/tests/: integration.rs
cmake/: FindUCRA.cmake  UCRA.cmake  UCRAConfig.cmake.in
docs/: annotated.html  api_ucra.md  classes.html  create__test__wav_8c_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6b90aa213b59a0475b0ba260a09ace51.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  github-pages-setup.md  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__CoreAPI.html  group__FlagMapperAPI.html  group__ManifestAPI.html  group__StreamingAPI.html  index.html  json_library_evaluation.md  md__2home_2runner_2work_2ucra_2ucra_2docs_2api__ucra.html  md__2home_2runner_2work_2ucra_2ucra_2docs_2quick-start.html  menudata.js  openutau-manifest.md  pages.html  quick-start.md  resampler__cli_8c_source.html  spec_manifest.md  structUCRA__CLIArgs.html  structUCRA__Engine__.html  structUCRA__EnvCurve.html  structUCRA__F0Curve.html  structUCRA__FlagMapResult.html  structUCRA__FlagMapper.html  structUCRA__FlagRule.html  structUCRA__KeyValue.html  (+19 more)
docs/guides/: openutau.md  utau.md
docs/search/: all_0.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  pages_6.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  (+10 more)
examples/: README.md
examples/advanced/ucra-world-engine/: CMakeLists.txt  README.md
examples/advanced/ucra-world-engine/src/: ucra_manifest.c  ucra_streaming.c  ucra_world_engine.cpp
examples/advanced/ucra-world-engine/tests/: README.md  test_headers.c  test_manifest.c  test_streaming_buffering.c  test_streaming_integration.c  test_streaming_read.c  test_suite.c  test_world_comprehensive.c  test_world_render.c
examples/advanced/ucra-world-engine/tests/data/: broken_manifest.json  example_manifest.json  invalid_entry_type.json  invalid_missing_name.json
examples/basic-rendering/: CMakeLists.txt  README.md  basic_rendering.c  multi_note_render.c  streaming_example.c  wav_output.c
examples/sample-voicebank/: resampler.json
examples/simple-usage/: CMakeLists.txt  README.md  basic_engine.c  manifest_usage.c  simple_render.c  simple_usage.c
examples/world/: CMakeLists.txt  main_world_demo.c  world_engine_stub.cpp
include/ucra/: ucra.h  ucra_flag_mapper.h
schemas/: resampler.schema.json
src/: audio_compare.c  create_test_wav.c  f0_rmse_calc.c  golden_runner.c  mcd_calc.c  resampler_cli.c  ucra_engine.c  ucra_flag_mapper.c  ucra_streaming.c  validation_suite.c
test_vb/: resampler.json
tests/: CMakeLists.txt  poc_parser.c  test_flag_mapper.c  test_streaming_integration.c  test_streaming_lifecycle.c  test_streaming_read.c  test_world_engine.c
tests/data/: invalid_enum_no_values.json  invalid_negative_rate.json  test_f0_curve.txt  test_f0_curve_variant.txt
tests/data/test_case_001/: f0_curve.txt  manifest.json
tools/: README.md  audio_compare.c  create_golden_wav.c  mcd_calc.c  ucra_manifest_gen.c
tools/flag_mapper/: README.md  cli.py  requirements.txt
tools/flag_mapper/flag_mapper/: __init__.py  loader.py  transform.py
tools/flag_mapper/flag_mapper/schema/: mapping_schema.json
tools/flag_mapper/mappings/: moresampler_map.json
tools/flag_mapper/tests/: test_loader.py  test_transform.py
